added desktop styles

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <div class="header-title">
       <h1>
         Hi! I am <span style="color: rgb(83, 83, 159)">Vincent</span>,<br />
-        <span style="color: rgb(83, 83, 159)">Full-stack Developer</span>.
+        <span style="color: rgb(83, 83, 159)">Full-stack Developer</span> in
+        Tallinn, Estonia
       </h1>
     </div>
 
@@ -44,11 +45,14 @@
         <h2>About Me</h2>
       </div>
       <p>
-        My name is Vincent, and i'm a 27 years old developer. <br />
-        I found my passion for web development and programming overall in March
-        2023. <br />
-        I have experience with HTML, CSS, JavaScript, and i am motivated to
-        learn more.
+        I've been <span style="color: rgb(83, 83, 159)">passionate</span> about
+        computers since childhood. What began as a
+        <span style="color: rgb(83, 83, 159)">fascination</span>, <br />
+        turned into a serious hobby when I started developing software in 2023.
+        <br />
+        Over time, this passion transformed into a
+        <span style="color: rgb(83, 83, 159)">career choice</span>, shaping my
+        journey into the world of technology.
       </p>
       <ul class="tech_stack">
         <li>Java</li>
