Added styles, paragraph

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <div class="hamburger-icon"></div>
               <div class="hamburger-icon"></div>
             </a>
-            <div class="dropdown-content">
+            <div class="dropdown-content" id="dropdownContent">
               <a class="nav__link" href="#section--1">About Me</a>
               <a class="nav__link" href="#section--2">My Projects</a>
               <a class="nav__link" href="#footer--1">Github</a>
@@ -64,24 +64,47 @@
       <div class="section_title">
         <h2>About Me</h2>
       </div>
-      <p>
-        I've been <span style="color: rgb(83, 83, 159)">passionate</span> about
-        computers since childhood. What began as a
-        <span style="color: rgb(83, 83, 159)">fascination</span>, <br />
-        turned into a serious hobby when I started developing software in 2023.
-        <br />
-        Over time, this passion transformed into a
-        <span style="color: rgb(83, 83, 159)">career choice</span>, shaping my
-        journey into the world of technology.
-      </p>
-      <ul class="tech_stack">
-        <li>Java</li>
-        <li>Spring Boot</li>
-        <li>JavaScript</li>
-        <li>React.js</li>
-        <li>PostgreSQL</li>
-        <li>GIT</li>
-      </ul>
+      <div class="section_about_me">
+        <div class="info_about_me">
+          <p>
+            I've been
+            <span style="color: rgb(83, 83, 159)">passionate</span> about
+            computers since childhood. What began as a
+            <span style="color: rgb(83, 83, 159)">fascination</span>, <br />
+            turned into a serious hobby when I started developing software in
+            2023.
+            <br />
+            Over time, this passion transformed into a
+            <span style="color: rgb(83, 83, 159)">career choice</span>, shaping
+            my journey into the world of technology. <br /><br />
+            <br />
+            On this journey, I've dedicated myself to mastering the vast realm
+            of
+            <span style="color: rgb(83, 83, 159)">technology</span>. <br />
+            <span style="color: rgb(83, 83, 159)">My goal</span> is to excel as
+            a developer and make myself proud of my achievements. <br />
+            To equip myself with the necessary
+            <span style="color: rgb(83, 83, 159)">skills</span> and
+            <span style="color: rgb(83, 83, 159)">knowledge</span>,
+            <br />
+            I've enrolled in numerous courses on platforms like Udemy and Aurora
+            Development.
+            <br />
+            These courses have been crucial in helping me grasp the essential
+            <br />
+            concepts and techniques to become a
+            <span style="color: rgb(83, 83, 159)">proficient</span> developer.
+          </p>
+        </div>
+        <ul class="tech_stack">
+          <li>Java</li>
+          <li>Spring Boot</li>
+          <li>JavaScript</li>
+          <li>React.js</li>
+          <li>PostgreSQL</li>
+          <li>GIT</li>
+        </ul>
+      </div>
     </section>
 
     <section class="section" id="section--2">
@@ -99,7 +122,6 @@
     </section>
 
     <footer class="footer" id="footer--1">
-      <h2>CONTACT</h2>
       <p class="contact_info">Tallinn, Estonia</p>
       <div class="contact_logos">
         <a class="footer-item" href="mailto:vincentrandla@gmail.com"
