Added cv, styles, fixed mobile list padding

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </a>
             <div class="dropdown-content" id="dropdownContent">
               <a class="nav__link" href="#section--1">About Me</a>
+              <a class="nav__link" href="#section--cv">My CV</a>
               <a class="nav__link" href="#section--2">My Projects</a>
               <a class="nav__link" href="#footer--1">Github</a>
               <!-- Add more dropdown links here -->
@@ -107,6 +108,13 @@
       </div>
     </section>
 
+    <section class="section cv_section" id="section--cv">
+      <div>
+        <button class="toggle_btn" id="toggle--btn">Show CV</button>
+      </div>
+      <img class="my_cv" src="Assets/VR-CV.jpg" alt="My CV" />
+    </section>
+
     <section class="section" id="section--2">
       <div class="section_title">
         <h2>My Projects</h2>
@@ -127,7 +135,7 @@
         <a class="footer-item" href="mailto:vincentrandla@gmail.com"
           ><img
             class="email_logo footer-logo"
-            src="EmailLogo3.png"
+            src="Assets/EmailLogo3.png"
             alt="E-mail logo"
         /></a>
         <a
@@ -136,7 +144,7 @@
           target="blank"
           ><img
             class="github_logo footer-logo"
-            src="GithubLogo.png"
+            src="Assets/GithubLogo.png"
             alt="Github Logo"
         /></a>
       </div>
