--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+    <link rel="shortcut icon" type="image/x-icon" href="Assets/briefcase.png" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
   </head>
@@ -41,9 +42,8 @@
             <div class="dropdown-content" id="dropdownContent">
               <a class="nav__link" href="#section--1">About Me</a>
               <a class="nav__link" href="#section--cv">My CV</a>
-              <a class="nav__link" href="#section--2">My Projects</a>
+              <!-- <a class="nav__link" href="#section--2">My Projects</a> -->
               <a class="nav__link" href="#footer--1">Github</a>
-              <!-- Add more dropdown links here -->
             </div>
           </li>
         </ul>
@@ -115,7 +115,7 @@
       <img class="my_cv" src="Assets/VR-CV.jpg" alt="My CV" />
     </section>
 
-    <section class="section" id="section--2">
+    <!-- <section class="section" id="section--2">
       <div class="section_title">
         <h2>My Projects</h2>
       </div>
@@ -127,7 +127,7 @@
         accusamus illum doloremque labore, consequatur sunt illo quaerat natus
         aliquid tempora temporibus qui quam commodi consectetur.
       </p>
-    </section>
+    </section> -->
 
     <footer class="footer" id="footer--1">
       <p class="contact_info">Tallinn, Estonia</p>
