Fixed hamburger icon not closing properly

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <nav class="nav">
         <ul class="nav__links">
           <li class="nav__item dropdown-mobile">
-            <a class="nav__link dropbtn">
+            <a class="nav__link dropbtn" onclick="toggleDropdown(event)">
               <div class="hamburger-icon"></div>
               <div class="hamburger-icon"></div>
               <div class="hamburger-icon"></div>
