added project showcase for desktop screens

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             </a>
             <div class="dropdown-content" id="dropdownContent">
               <a class="nav__link" href="#section--1">About Me</a>
+              <a class="nav__link" href="#section--2">My Projects</a>
               <a class="nav__link" href="#section--cv">My CV</a>
-              <!-- <a class="nav__link" href="#section--2">My Projects</a> -->
               <a class="nav__link" href="#footer--1">Github</a>
             </div>
           </li>
@@ -108,26 +108,98 @@
       </div>
     </section>
 
+    <section class="section" id="section--2">
+      <div class="section_title">
+        <h2>My Projects</h2>
+      </div>
+      <main class="projects_main">
+        <div class="dinner_project">
+          <img class="dinner_picture" src="Assets/whatsfordinnerpic.png" />
+          <div class="dinner_description">
+            <p>
+              A small fun project I did to get some dinner ideas for myself.
+            </p>
+            <a href="https://dinner-ideas.netlify.app/" target="_blank"
+              >Link to the webpage.</a
+            >
+          </div>
+        </div>
+        <div class="reisi_project">
+          <div class="slider_container">
+            <img
+              class="reisi_picture"
+              src="Assets/reisigalerii frontpage.png"
+            />
+            <img
+              class="reisi_picture"
+              src="Assets/reisigalerii offerpage.png"
+            />
+            <button class="arrow left_arrow">
+              <svg
+                fill="white"
+                height="2rem"
+                width="2rem"
+                version="1.1"
+                id="Layer_1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                viewBox="0 0 330 330"
+                xml:space="preserve"
+                style="transform: rotate(-90deg)"
+              >
+                <path
+                  id="XMLID_224_"
+                  d="M325.606,229.393l-150.004-150C172.79,76.58,168.974,75,164.996,75c-3.979,0-7.794,1.581-10.607,4.394
+              l-149.996,150c-5.858,5.858-5.858,15.355,0,21.213c5.857,5.857,15.355,5.858,21.213,0l139.39-139.393l139.397,139.393
+              C307.322,253.536,311.161,255,315,255c3.839,0,7.678-1.464,10.607-4.394C331.464,244.748,331.464,235.251,325.606,229.393z"
+                ></path>
+              </svg>
+            </button>
+            <button class="arrow right_arrow">
+              <svg
+                fill="white"
+                height="2rem"
+                width="2rem"
+                version="1.1"
+                id="Layer_1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                viewBox="0 0 330 330"
+                xml:space="preserve"
+                style="transform: rotate(90deg)"
+              >
+                <path
+                  id="XMLID_224_"
+                  d="M325.606,229.393l-150.004-150C172.79,76.58,168.974,75,164.996,75c-3.979,0-7.794,1.581-10.607,4.394
+              l-149.996,150c-5.858,5.858-5.858,15.355,0,21.213c5.857,5.857,15.355,5.858,21.213,0l139.39-139.393l139.397,139.393
+              C307.322,253.536,311.161,255,315,255c3.839,0,7.678-1.464,10.607-4.394C331.464,244.748,331.464,235.251,325.606,229.393z"
+                ></path>
+              </svg>
+            </button>
+          </div>
+          <div class="dot_container"></div>
+          <div class="reisi_description">
+            <p>
+              My biggest project yet, which I'm tinkering every now and then
+              <br />
+              using Reactjs, Spring Boot and my own database with PostgreSQL.
+            </p>
+            <a
+              href="https://github.com/vincentrandla/Reisigalerii"
+              target="_blank"
+              >Link to source code.</a
+            >
+          </div>
+        </div>
+      </main>
+    </section>
+
     <section class="section cv_section" id="section--cv">
       <div>
         <button class="toggle_btn" id="toggle--btn">Show CV</button>
       </div>
       <img class="my_cv" src="Assets/VR-CV.jpg" alt="My CV" />
     </section>
-
-    <!-- <section class="section" id="section--2">
-      <div class="section_title">
-        <h2>My Projects</h2>
-      </div>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit distinctio
-        et obcaecati, ipsam sequi labore quaerat odio libero veniam
-        consequuntur! Sapiente, quae. In reprehenderit asperiores sit nostrum
-        molestias ipsam voluptatum, repellendus minus, praesentium recusandae
-        accusamus illum doloremque labore, consequatur sunt illo quaerat natus
-        aliquid tempora temporibus qui quam commodi consectetur.
-      </p>
-    </section> -->
 
     <footer class="footer" id="footer--1">
       <p class="contact_info">Tallinn, Estonia</p>
